add svg picture

--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,7 @@
          </div> 
       </section>
     </main>
-    !-- open footer -->
+    <!-- open footer -->
     <footer class="footer">
       <address>
         <div class="container adress">
